[package]
name = "cronus"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
fork = "0.2"
nng = "1.0"
rhai = "1.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", features = ["paw"] }
tokio = { version = "1.47", features = ["full"] }
tokio-cron-scheduler = "0.14"
uuid = "1.17"
