[package]
name = "cronus"
version = "0.1.0"
edition = "2024"

[profile]
release = { lto = "fat" }

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
fork = "0.3.1"
nng = "1.0.1"
rhai = "1.23.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
uuid = "1.18.1"
