[package]
name = "cronus"
version = "0.1.0"
edition = "2024"

[profile]
release = { lto = "fat" }

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
fork = "0.6.0"
nng = "1.0.1"
rhai = "1.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
uuid = "1.21.0"
